Crash when disabling an addon while its panel is visible in the viewport #65999

Closed
opened 2019-06-21 17:52:26 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: a887e1ea
Worked: ?

Short description of error
Crash as soon as I disable an addon (e.g., the 3D View: 3D Navigation).

Exact steps for others to reproduce the error

  • Enable an addon with a viewport panel (e.g., 3D View: 3D Navigation).
  • Show the panel (Show Sidebar - N, change to View category/tab).

Now in the user preference disable the addon:

SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/editors/interface/interface_panel.c:165 in panel_active_animation_changed
Full ASAN report: P1008

**Blender Version** Broken: a887e1ea Worked: ? **Short description of error** Crash as soon as I disable an addon (e.g., the *3D View: 3D Navigation*). **Exact steps for others to reproduce the error** * Enable an addon with a viewport panel (e.g., *3D View: 3D Navigation*). * Show the panel (Show Sidebar - N, change to View category/tab). Now in the user preference disable the addon: `SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/editors/interface/interface_panel.c:165 in panel_active_animation_changed` Full ASAN report: [P1008](https://archive.blender.org/developer/P1008.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by a6d2f9ffd0

This issue was referenced by a6d2f9ffd0d8a8d7d973a320c978d9914615855e
Dalai Felinto self-assigned this 2019-06-21 18:20:31 +02:00
Author
Owner

I was trying to bisect this but whatever the original cause, this was introduced a few months already. For the records:

Release buid: OK

BAD: 146f6cea55
BAD f07140940c (different error).

I was trying to bisect this but whatever the original cause, this was introduced a few months already. For the records: Release buid: OK BAD: 146f6cea55 BAD f07140940c (different error).
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65999
No description provided.